client/app/src/App.css
/* ... */
.footer-iconTop a:before{
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background: var(--main-color);
  z-index: -1;
  transition: .5s;
}
.footer-iconTop a:hover:before{
  width: 100%;
}
/* animation on reload and scroll */
.animate{
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: var(--bg-color);
  z-index: 98;
}
/* section:nth-child(odd) .animate.scroll{
  background: var(--second-bg-color);
} */
.contact h2 .animate.scroll,
.contact form .input-box .input-field .animate.scroll,
.contact form .textarea-field .animate.scroll{
  background: black;
}

.logo .animate,
.navbar .animate,
#menu-icon .animate,
.home.show-animate .animate{
  animation: showRight 1s ease forwards;
  animation-delay: calc(.3s * var(--i));
}
.animate.scroll{
  transition: 1s ease;
  transition-delay: calc(.3s/ var(--i));
  animation: none;
}
.education.show-animate .animate.scroll,
.contact.show-animate .animate.scroll{
  transition-delay: calc(.3s * var(--i));
  width: 0;
} 

.education .education-box .animate{
  width: 105%;
}

/* Break point*/
@media(max-width:1200px){
    html{
      font-size: 55%;
    }
}
@media(max-width: 1000px){
  .header{
    padding: 2rem 4%;
  }
  .footer{
    padding: 2rem 4%;
  }
  /* .portfolio .portfolio-container{
    grid-template-columns: repeat(2, 1fr);
    
    gap: 5rem;
  } */
  .contact{
    padding: 7rem;
  }
  .contact form{
    min-width:fit-content;
  }
  .contact form .input-box .input-field{
    width: 100%;
  }
}
@media(max-width:768px){
  .header{
    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
  border-radius: 5px;
  background-color: rgba(255, 255, 255, 0.018);
  backdrop-filter: blur(5px);
  }
  #menu-icon{
    display: block;
  }
  .navbar{
    position: absolute;
    display: flex;
    flex-direction: column;
    top: 100%;
    left: -100%;
    width: 100%;
    padding: 1rem 4%;
    background: var(--main-color);
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
    z-index: 1;
    transition: .25s ease;
    transition-delay: .25s;
  }
  .navbar.active{
    left: 0;
    transition-delay: 0s;
  }
  .navbar .active-nav{
    position: absolute;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    background: #010001;
    border-top: .1rem solid rgba(0,0,0,.2);
    z-index: -1;
    transition: .25s ease;
    transition-delay: 0s;
  }
  .navbar.active .active-nav{
    left: 0;
    transition-delay: 0.25s;
  }

  .navbar a{
    display: block;
    font-size: 2rem;
    margin: 3rem 0;
    transform: translate(-20rem);
    transition-delay: 0s;
  }
  .navbar.active a{
    transform: translate(0);
    transition-delay: 0.25s;
  }
  .home-imgHover{
    pointer-events: none;
    background: var(--bg-color);
    opacity: .6;
  }
  .portfolio .portfolio-container{
    grid-template-columns: repeat(1, 1fr);
    margin: 0 4rem;
    gap: 5rem;
  }
}
@media(max-width:520px){
  html{
    font-size: 50%;
  }
  .home-content h1{
    display: flex;
    flex-direction: column;
  }
  .home-social{
    width: 160px;
  }
  .home-social a{
    width: 38px;
    height: 38px;
  }
}
@media(max-width:460px){
  .home-content h1{
    font-size: 5.2rem;
  }
  .education{
    padding: 10rem 4% 5rem 5%;
  }
  .footer{
    flex-direction: column-reverse;
  }
  .footer p{
    margin-top: 2rem;
    text-align: center;
  }
}


@keyframes homeBgText{
  0%,10%,100%{
    background-position: -33rem 0;
  }
  65%,85%{
    background-position: 0 0;
  }
}
@keyframes homeCursorText{
  0%,10%,100%{
    width: 0;
  }
  65%,78%,85%{
    width:100%;
    opacity: 1;
  }
  75%, 81%{
    opacity: 0;
  }
}
@keyframes aboutSpinner{
  100%{
    transform: translate(-50%, -50%) rotate(360deg);
  }
}
@keyframes showRight{
  100%{
    width: 0;
  }
}



/* below is a popup that we are testing */
.toast {
  position: fixed;
  top: 100px;
  right: 25px;
  border-radius: 12px;
  background: #fff;
  padding: 20px 35px 20px 25px;
  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  transform: translateX(calc(100% + 30px));
  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
  z-index: 150;
}
.toast.active {
  transform: translateX(0%);
}

.toast .toast-content {
  display: flex;
  align-items: center;
}

.toast-content .check {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 35px;
  min-width: 35px;
  background-color: var(--main-color);
  color: #fff;
  font-size: 20px;
  border-radius: 50%;
}

.toast-content .message {
  display: flex;
  flex-direction: column;
  margin: 0 20px;
}

.message .text {
  font-size: 16px;
  font-weight: 400;
  color: #666666;
}

.message .text.text-1 {
  font-weight: 600;
  color: #333;
}

.toast .close {
  position: absolute;
  top: 0;
  right: 0;
  color: black;
  font-size: 2.5rem;
  padding: 5px;
  cursor: pointer;
  opacity: 0.7;
  z-index: 500;
}

.toast .close:hover {
  opacity: 1;
}

.toast .progress {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 4px;
  width: 100%;

}

.toast .progress:before {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  height: 100%;
  width: 100%;
  background-color: var(--main-color);
}

.progress.active:before {
  animation: progress 5s linear forwards;
}

@keyframes progress {
  100% {
    right: 100%;
  }
}

